--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -61,6 +61,10 @@
   "data.health_services.detail_mix": "'يمكنك الاتصال برقم ",
   "data.health_services.detail_website": "هذا المَوْقِع الإِلَكْتُرُونِيّ",
 
+  "validation_status": "حالة التحقق",
+  "pdf_notice": "هذه الوثيقة مأخوذة من موقع [afetbilgi.com](https://afetbilgi.com). آخر تاريخ للتحقق من صحة البيانات: {date}",
+  "validation_time": "الساعة التحديث",
+
   "notFound": "لم يتم العثور على الصفحة",
   "button.back": "السابق",
   "button.language": "تغيير",
