--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -61,6 +61,10 @@
   "data.health_services.detail_mix": " or you can check ",
   "data.health_services.detail_website": "this website",
 
+  "validation_status": "Is Valid",
+  "pdf_notice": "This document is from afetbilgi.com. Last data validation date: {date}",
+  "validation_time": "Last Update Time",
+
   "notFound": "Page not found",
   "button.back": "Back",
   "button.language": "Change Language",
