--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -61,6 +61,10 @@
   "data.health_services.detail_mix": "'i arayabilirsiniz ya da ",
   "data.health_services.detail_website": "bu web sitesini",
 
+  "validation_status": "Doğrulanma Durumu",
+  "pdf_notice": "Bu belge [afetbilgi.com](https://afetbilgi.com) sitesinden alınmıştır. Verilerin son doğrulanma tarihi: {date}",
+  "validation_time": "Güncelleme Saati",
+
   "notFound": "Sayfa bulunamadı",
   "button.back": "Geri",
   "button.language": "Dili Değiştir",
