add new category

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -15,6 +15,7 @@
   "category.victim.name": "لضحايا الزلزال",
   "category.helper.name": "لمن يريد المساعدة",
   "category.resources.name": "الموارد المهمة",
+  "category.health.name": "الخدمات الصحية",
   "category.other.name": "آخر",
 
   "data.city_accommodation.title": "{{city}} أماكن للإقامة في مدينة / أماكن للإقامة",
