--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -15,6 +15,7 @@
   "category.victim.name": "Ji bo mexdûrên erdhêjê",
   "category.helper.name": "Ji bo alîkarî",
   "category.resources.name": "Çavkanîyên Giring",
+  "category.health.name": "Xizmetên tendirûstiyê",
   "category.other.name": "Yên din",
 
   "data.city_accommodation.title": "{{city}} cihên mayînê",
