--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -15,6 +15,7 @@
   "category.victim.name": "Depremzedeler İçin",
   "category.helper.name": "Yardım Etmek İsteyenler İçin",
   "category.resources.name": "Önemli Kaynaklar",
+  "category.health.name": "Sağlık Servisleri",
   "category.other.name": "Diğer",
 
   "data.city_accommodation.title": "{{city}} Şehrinde Kalacak Yerler",
