--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -9,6 +9,7 @@
   "page.tooltip.afetharita": "Yardım bildirimlerinin haritada gösterilmesi için kullanabileceğiniz site.",
   "page.tooltip.depremio": "Depremzedelere erzak yardımı için kullanabileceğiniz site.",
   "page.tooltip.discord": "Projelerimizi geliştirmek ve birbirimizle iletişim kurmak için kullandığımız Discord sunucusu.",
+  "page.tooltip.twitter": "Bize Twitter'dan ulaşabilmeniz için hesabımız",
 
 
   "category.victim.name": "Depremzedeler İçin",
