--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -9,6 +9,7 @@
   "page.tooltip.afetharita": "Website that you can use to show help notifications on the map.",
   "page.tooltip.depremio": "Website that you can use to help earthquake victims with food.",
   "page.tooltip.discord": "Discord server that we use to develop our projects and communicate with each other.",
+  "page.tooltip.twitter": "Our Twitter account to reach us via Twitter",
 
   "category.victim.name": "For Earthquake Victims",
   "category.helper.name": "To Help",
