--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -9,7 +9,7 @@
   "page.tooltip.afetharita": "Site ku hewceyê pêşniyarên bişopînê li ser pêşniyarê bikî.",
   "page.tooltip.depremio": "Site ku hewceyê depremê xwe bi erzakê bişopînin.",
   "page.tooltip.discord": "Discord server ku hewceyê projeyên xwe ve bi xweyê din bike.",
-  "page.tooltip.twitter": "Hesabê me da ku hûn li ser Twitterê bigihîjin me.",
+  "page.tooltip.twitter": "Hesabê me yê Twitterê bo têkiliyê",
 
 
   "category.victim.name": "Ji bo mexdûrên erdhêjê",
