--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -11,7 +11,7 @@
   "page.tooltip.discord": "Discord server that we use to develop our projects and communicate with each other.",
   "page.tooltip.twitter": "Our Twitter account to reach us via Twitter",
 
-  "category.victim.name": "For Earthquake Victims",
+  "category.victim.name": "General Needs",
   "category.helper.name": "To Help",
   "category.resources.name": "Important Resources",
   "category.health.name": "Health Services",
