--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -12,7 +12,7 @@
   "page.tooltip.twitter": "Hesabê me yê Twitterê bo têkiliyê",
 
 
-  "category.victim.name": "Ji bo mexdûrên erdhêjê",
+  "category.victim.name": "Pêdiviyên gelemperî",
   "category.helper.name": "Ji bo alîkarî",
   "category.resources.name": "Çavkanîyên Giring",
   "category.health.name": "Xizmetên tendirûstiyê",
