--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -12,7 +12,7 @@
   "page.tooltip.twitter": "Bize Twitter'dan ulaşabilmeniz için hesabımız",
 
 
-  "category.victim.name": "Depremzedeler İçin",
+  "category.victim.name": "Genel İhtiyaçlar",
   "category.helper.name": "Yardım Etmek İsteyenler İçin",
   "category.resources.name": "Önemli Kaynaklar",
   "category.health.name": "Sağlık Servisleri",
