--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -12,7 +12,7 @@
   "page.tooltip.twitter": "حسابنا لتتمكن من التواصل معنا على تويتر", 
 
 
-  "category.victim.name": "لضحايا الزلزال",
+  "category.victim.name": "الحاجات العامة",
   "category.helper.name": "لمن يريد المساعدة",
   "category.resources.name": "الموارد المهمة",
   "category.health.name": "الخدمات الصحية",
