change search algorithm and add redirection button

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -72,6 +72,7 @@
   "button.language": "تغيير",
   "button.google_maps": "رابط خرائط جوجل",
   "button.download": "تنزيل كملف PDF",
+  "button.map": "عرض على الخريطة",
   "last_update": "اخر تحديث",
   "name": "اسم",
   "map": "خَرِيطَة",
