--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -72,6 +72,7 @@
   "button.language": "Dili Değiştir",
   "button.google_maps": "Google Maps Linki",
   "button.download": "PDF Olarak İndİr",
+  "button.map": "HARİTA ÜSTÜNDE GÖRÜNTÜLE",
   "last_update": "Son güncelleme",
   "name": "İsim",
   "map": "Harita",
