--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -72,6 +72,7 @@
   "button.language": "Ziman biguherîne",
   "button.google_maps": "Girêdana Google Mapsê ",
   "button.download": "Wekî PDF dakêşin",
+  "button.map": "Li ser nexşeyê nîşan bide",
   "last_update": "nûvekirina dawîn",
   "name": "Nav",
   "map": "Qert",
