--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -5,7 +5,7 @@
   "page.about.body.1": "http://afetbilgi.com/ is a website created by a group of METU students and graduates to verify and deliver important information to fight against February 6, 2023, Pazarcık Earthquake.",
   "page.about.body.2": "This website is based on a completely human-made database and works with accuracy, speed, and simplicity principles. When contacting us, we strongly ask you to deliver only verified information and cooperate with us to prevent disinformation.",
 
-  "page.tooltip.depremyardim":"Website that you can use to search for earthquake victims and help them.",
+  "page.tooltip.depremyardim": "Website that you can use to search for earthquake victims and help them.",
   "page.tooltip.afetharita": "Website that you can use to show help notifications on the map.",
   "page.tooltip.depremio": "Website that you can use to help earthquake victims with food.",
   "page.tooltip.discord": "Discord server that we use to develop our projects and communicate with each other.",
@@ -36,11 +36,7 @@
   "data.veterinary.subtitle": "All vets on this page are phone verified. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
   "data.food_distribution.title": "{{city}}, {{county}} Free Food Delivery Locations",
   "data.food_distribution.subtitle": "All locations on this page have been verified by phone. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
-  "data.food_distribution.detail_main": "For detailed information you can check ",
-  "data.food_distribution.detail_call": "",
-  "data.food_distribution.detail_inspect": "",
-  "data.food_distribution.detail_mix": " or you can check ",
-  "data.food_distribution.detail_website": "this website",
+  "data.gas_stations.title": "{{city}}, {{county}} Gas Stations",
   "data.stem_cell.title": "Stem Cell Donation Points",
   "data.phone_number.link_explanation_p1": "You can call",
   "data.phone_number.link_explanation_p2": "for detailed information",
