--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -22,12 +22,12 @@
   "data.city_accommodation.explanation": "ragihand ku ew ê ji bo mexdûrên erdhejê cihan peyda bikin",
   "data.city_accommodation.link_explanation_p1": "Ji bo agahdariya berfireh",
   "data.city_accommodation.link_explanation_p2": "bu linkten ulaşabilirsiniz",
-  "data.city_accommodation.not_validated": "Nîşe: Me nekarî bi têlefonê vê agahiyê verast bikin.       ",
+  "data.city_accommodation.not_validated": "Nîşe: Me nekarî bi têlefonê vê agahiyê verast bikin.",
   "data.gathering.title": "{{city}} Cihên kombûna ewle li bajêr",
   "data.help_item.title": "{{city}} Cihên alîkariya babetê",
   "data.important_phone_numbers.title": "Numareyên girîng",
   "data.important_web_sites.title": "Malperên girîng",
-  "data.important_web_sites.subtitle": " Li vir girêdanên ku hûn hewce ne hene ",
+  "data.important_web_sites.subtitle": "Li vir girêdanên ku hûn hewce ne hene",
   "data.important_articles.title": "Nivîsên kêrhatî",
   "data.important_articles.subtitle": "Hûn dikarin li jêr nivîsên kêrhatî yên derbarê piştî erdhejê de bibînin..",
   "data.important_articles.article_title": "Sernav",
@@ -36,7 +36,7 @@
   "data.veterinary.subtitle": "Hemî numareyê veterîneran yên li ser vê rûpelê bi têlefonê hatine verast kirin. Lêbelê, ji ber ku ev agahdarî dikare di nav çend rojan an jî saetan de biguhere, ji we tê xwestin ku hûn lêkolîna xwe bikin.",
   "data.food_distribution.title": "{{city}}, {{county}} Cihên carina bêpere",
   "data.food_distribution.subtitle": "Hemî cihên li ser vê rûpelê bi têlefonê hatine verast kirin. Lêbelê, ji ber ku ev agahdarî dikare di nav çend rojan an jî saetan de biguhere, ji we tê xwestin ku hûn lêkolîna xwe bikin.",
-  "data.gas_stations.title": "{{city}}, {{county}} Cihên carina bêpere",
+  "data.gas_stations.title": "Li {{city}} {{county}}ê stasyonên sotemeniyê yên vekirî",
   "data.stem_cell.title": "Cihên bo bexşîna xaneyî bineretiyê   ",
   "data.phone_number.link_explanation_p1": "Bo Hûgulî",
   "data.phone_number.link_explanation_p2": "Hûn dikarin li vê numareyê bigerin",
