--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -58,6 +58,11 @@
   "data.health_services.detail_inspect": "",
   "data.health_services.detail_mix": " or you can check ",
   "data.health_services.detail_website": "this website",
+  "data.pdf.title": "Download as PDF",
+  "data.pdf.description": "Please select one of the cities affected by the earthquake to download as PDF.",
+  "data.pdf.or": "All cities",
+  "data.pdf.citySelect": "Select a city",
+  "data.pdf.download": "Download",
 
   "validation_status": "Is Valid",
   "pdf_notice": "This document is from afetbilgi.com. Last data validation date: {date}",
