add all cities to pdf dialog

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -62,6 +62,7 @@
   "data.pdf.or": "All cities",
   "data.pdf.citySelect": "Select a city",
   "data.pdf.download": "Download",
+  "data.pdf.all": "All Cities",
 
   "validation_status": "حالة التحقق",
   "pdf_notice": "هذه الوثيقة مأخوذة من موقع [afetbilgi.com](https://afetbilgi.com). آخر تاريخ للتحقق من صحة البيانات: {date}",
