--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -62,6 +62,7 @@
   "data.pdf.or": "All cities",
   "data.pdf.citySelect": "Select a city",
   "data.pdf.download": "Download",
+  "data.pdf.all": "All Cities",
 
   "validation_status": "Rewşa verastkirinê",
   "pdf_notice": "",
