--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -63,6 +63,7 @@
   "data.pdf.citySelect": "Select a city",
   "data.pdf.download": "Download",
   "data.pdf.all": "All Cities",
+  "data.pdf.select": "To download the PDF, select the city and press the download button.",
 
   "validation_status": "Rewşa verastkirinê",
   "pdf_notice": "",
