add icons to top bar

--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -74,7 +74,7 @@
   "button.language": "Dili Değiştir",
   "button.google_maps": "Google Maps Linki",
   "button.download": "PDF Olarak İndİr",
-  "button.map": "HARİTA ÜSTÜNDE GÖRÜNTÜLE",
+  "button.map": "AFETBİLGİ HARİTA",
   "last_update": "Son güncelleme",
   "name": "İsim",
   "map": "Harita",
