change main menu button names

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -73,8 +73,8 @@
   "button.back": "السابق",
   "button.language": "تغيير",
   "button.google_maps": "رابط خرائط جوجل",
-  "button.download": "تنزيل كملف PDF",
-  "button.map": "عرض على الخريطة",
+  "button.download": "PDF",
+  "button.map": "خريطة",
   "last_update": "اخر تحديث",
   "name": "اسم",
   "map": "خَرِيطَة",
