--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -73,8 +73,8 @@
   "button.back": "Geri",
   "button.language": "Dili Değiştir",
   "button.google_maps": "Google Maps Linki",
-  "button.download": "PDF Olarak İndİr",
-  "button.map": "AFETBİLGİ HARİTA",
+  "button.download": "PDF",
+  "button.map": "HARİTA",
   "last_update": "Son güncelleme",
   "name": "İsim",
   "map": "Harita",
