--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -74,8 +74,8 @@
   "button.back": "Back",
   "button.language": "Change Language",
   "button.google_maps": "Google Maps Link",
-  "button.download": "Download as PDF",
-  "button.map": "Show on map",
+  "button.download": "PDF",
+  "button.map": "MAP",
   "last_update": "Last Update",
   "name": "Name",
   "map": "Map",
