--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -73,8 +73,8 @@
   "button.back": "paş",
   "button.language": "Ziman biguherîne",
   "button.google_maps": "Girêdana Google Mapsê ",
-  "button.download": "Wekî PDF dakêşin",
-  "button.map": "Li ser nexşeyê nîşan bide",
+  "button.download": "PDF",
+  "button.map": "QERT",
   "last_update": "nûvekirina dawîn",
   "name": "Nav",
   "map": "Qert",
