--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -65,6 +65,7 @@
   "data.pdf.all": "Tüm Şehirler",
   "data.pdf.select": "PDF indirmek için şehir seçip indir butonuna basınız.",
   "data.pharmacy.title": "{{city}}, {{county }} Açık Eczaneler",
+  "data.pharmacy.subtitle": "Bu bilgiler {{date}} tarihine aittir. Bilgiler her gün güncellenmektedir. Kesin bilgi için lütfen eczanelerle iletişime geçiniz.",
 
   "validation_status": "Doğrulanma Durumu",
   "pdf_notice": "Bu belge [afetbilgi.com](https://afetbilgi.com) sitesinden alınmıştır. Verilerin son doğrulanma tarihi: {date}",
