--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -66,6 +66,8 @@
   "data.pdf.select": "To download the PDF, select the city and press the download button.",
   "data.pharmacy.title": "{{city}}, {{county }} Dermanxaneyan Vekin",
   "data.pharmacy.subtitle": "Agahdariyên vê agahdariyê {{date}}ê ye. Agahdariyên her roj nûvekirin. Ji kerema xwe ji eczaneler bi agahdariyên rast re bixwînin.",
+  "data.digital_platforms.title": "Digital Solidarity Campaigns",
+  "data.digital_platforms.subtitle": "You can support the earthquake victims by donating to the following campaigns.",
 
   "validation_status": "Rewşa verastkirinê",
   "pdf_notice": "",
