--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -67,7 +67,7 @@
   "data.pharmacy.title": "{{city}}, {{county }} Dermanxaneyan Vekin",
   "data.pharmacy.subtitle": "Agahdariyên vê agahdariyê {{date}}ê ye. Agahdariyên her roj nûvekirin. Ji kerema xwe ji eczaneler bi agahdariyên rast re bixwînin.",
   "data.digital_platforms.title": "Digital Solidarity Campaigns",
-  "data.digital_platforms.subtitle": "You can support the earthquake victims by donating to the following campaigns.",
+  "data.digital_platforms.subtitle": "You can find details of digital solidarity campaigns from the links below.",
 
   "validation_status": "Rewşa verastkirinê",
   "pdf_notice": "",
