--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -1,6 +1,7 @@
 {
   "page.main.title": "Ana Sayfa",
   "page.main.subtitle": "Lütfen bilgi almak istediğiniz konuyu seçiniz.",
+  "page.main.subtitle_city": "{{city}} ili hakkında bilgi almak istediğiniz konuyu seçiniz.",
   "page.about.title": "Hakkımızda / İletişim",
   "page.about.body.1": "afetbilgi.com 6 Şubat 2023 Pazarcık Depremi ile mücadelede önemli bilgilerin doğrulanarak hem afetzedelere hem de yardımcı olmak isteyenlere ulaştırılması için bir grup ODTÜ öğrencisi ve mezunu tarafından kurulmuş bir internet sitesidir.",
   "page.about.body.2": "Gönüllüler tarafından tamamen insan eliyle oluşturulan bir veri tabanı ile insanlara hızlı, teyitli ve faydalı bilgileri sağlama prensibiyle çalışıyoruz. Sadece doğru bilgileri iletmek ve yanlış haberlerin yayılmasını önlemek için bizimle iletişime geçerken sadece teyitli bilgilerin iletilmesini önemle rica ederiz.",
