--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -69,7 +69,7 @@
   "data.pharmacy.subtitle": "This information is valid as of {{date}}. Information is updated daily. Please contact the pharmacies for accurate information.",
   "data.digital_platforms.title": "Digital Solidarity Campaigns",
   "data.digital_platforms.subtitle": "You can find details of digital solidarity campaigns from the links below.",
-  "data.services.title": "Services in cities outside the disaster area",
+  "data.services.title": "Services in Cities Outside the Disaster Area",
   "service.category": "Service Category",
   "service.specific": "Specific Service Type",
 
