--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -98,5 +98,7 @@
   "details": "Details",
   "website": "Website",
   "source": "Source",
-  "contact": "Contact"
+  "contact": "Contact",
+
+  "TOC": "Table of Contents"
 }
