--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -97,5 +97,7 @@
   "details": " Hûrgilî",
   "website": " Malper",
   "source": "Çavkaniyê",
-  "contact": "Têkilî"
+  "contact": "Têkilî",
+
+  "TOC": "Naverok"
 }
