--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -97,5 +97,7 @@
   "details": "Detaylar",
   "website": "Websitesi",
   "source": "Kaynak",
-  "contact": "İletişim"
+  "contact": "İletişim",
+
+  "TOC": "İçindekiler"
 }
