--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -98,5 +98,7 @@
   "details": "تفاصيل",
   "website": "مَوْقِع إِلَكْتُرُونِيّ",
   "source": "مصدر",
-  "contact": "تواصل"
+  "contact": "تواصل",
+
+  "TOC": "محتويات"
 }
