--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -6,11 +6,14 @@
   "page.about.body.1": "afetbilgi.com 6 Şubat 2023 Pazarcık Depremi ile mücadelede önemli bilgilerin doğrulanarak hem afetzedelere hem de yardımcı olmak isteyenlere ulaştırılması için bir grup ODTÜ öğrencisi ve mezunu tarafından kurulmuş bir internet sitesidir.",
   "page.about.body.2": "Gönüllüler tarafından tamamen insan eliyle oluşturulan bir veri tabanı ile insanlara hızlı, teyitli ve faydalı bilgileri sağlama prensibiyle çalışıyoruz. Sadece doğru bilgileri iletmek ve yanlış haberlerin yayılmasını önlemek için bizimle iletişime geçerken sadece teyitli bilgilerin iletilmesini önemle rica ederiz.",
 
-  "page.tooltip.depremyardim": "Depremzedeleri aramak ve yardım etmek için kullanabileceğiniz site.",
-  "page.tooltip.afetharita": "Yardım bildirimlerinin haritada gösterilmesi için kullanabileceğiniz site.",
-  "page.tooltip.depremio": "Depremzedelere erzak yardımı için kullanabileceğiniz site.",
-  "page.tooltip.discord": "Projelerimizi geliştirmek ve birbirimizle iletişim kurmak için kullandığımız Discord sunucusu.",
-  "page.tooltip.twitter": "Bize Twitter'dan ulaşabilmeniz için hesabımız",
+  "page.tooltip.depremyardim.title": "depremyardim.com",
+  "page.tooltip.depremyardim.desc": "Depremzedeleri aramak ve yardım etmek için kullanabileceğiniz site.",
+  "page.tooltip.afetharita.title": "afetharita.com",
+  "page.tooltip.afetharita.desc": "Yardım bildirimlerinin haritada gösterilmesi için kullanabileceğiniz site.",
+  "page.tooltip.depremio.title": "deprem.io",
+  "page.tooltip.depremio.desc": "Depremzedelere erzak yardımı için kullanabileceğiniz site.",
+  "page.tooltip.discord.title": "Discord",
+  "page.tooltip.discord.desc": "Projelerimizi geliştirmek ve birbirimizle iletişim kurmak için kullandığımız Discord sunucusu.",
 
   "category.victim.name": "Genel İhtiyaçlar",
   "category.helper.name": "Yardım Etmek İsteyenler İçin",
