--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -6,10 +6,15 @@
   "page.about.body.1": "afetbilgi.com malperek e ku ji aliyê komek xwendekar û mezûnên ODTU ve hatiye amadekirin da ku di têkoşîna li dijî Erdheja 6ê Sibata 2023-an a Bazarcixê de agahiyên girîng verast bike û ewan bi mexdûrên karesatê û yên ku dixwazin alîkariyê bidin re parve bike.",
   "page.about.body.2": "Prensîbên bingehîn ên malperê, ku li ser bingehek bi tevahî ji hêla mirovan ve hatî çêkirin, rastbûn, bilez û sadebûn in. Dema ku bi me re têkilî daynin, em ji we daxwaz dikin ku hûn tenê agahdariyên pejirandî bidin û bi me re bixebitin da ku em pêşî li belavbûna agahdariyê derewîn bigirin.",
 
-  "page.tooltip.depremyardim": "Site ku hewceyê depremê xwe û bişopînin.",
-  "page.tooltip.afetharita": "Site ku hewceyê pêşniyarên bişopînê li ser pêşniyarê bikî.",
-  "page.tooltip.depremio": "Site ku hewceyê depremê xwe bi erzakê bişopînin.",
-  "page.tooltip.discord": "Discord server ku hewceyê projeyên xwe ve bi xweyê din bike.",
+
+  "page.tooltip.depremyardim.title": "depremyardim.com",
+  "page.tooltip.depremyardim.desc": "Site ku hewceyê depremê xwe û bişopînin.",
+  "page.tooltip.afetharita.title": "afetharita.com",
+  "page.tooltip.afetharita.desc": "Site ku hewceyê pêşniyarên bişopînê li ser pêşniyarê bikî.",
+  "page.tooltip.depremio.title": "deprem.io",
+  "page.tooltip.depremio.desc": "Site ku hewceyê depremê xwe bi erzakê bişopînin.",
+  "page.tooltip.discord.title": "Discord",
+  "page.tooltip.discord.desc": "Discord server ku hewceyê projeyên xwe ve bi xweyê din bike.",
   "page.tooltip.twitter": "Hesabê me yê Twitterê bo têkiliyê",
 
   "category.victim.name": "Pêdiviyên gelemperî",
