--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -71,9 +71,10 @@
   "data.digital_platforms.subtitle": "You can find details of digital solidarity campaigns from the links below.",
   "data.services.title": "Services in Cities Outside the Disaster Area",
   "data.services.subtitle": "You can find the services you need in the cities outside the disaster area from the links below.",
+  "data.emergency_areas.title": "{{city}}, {{county}} Acil Toplanma Alanları",
   "service.category": "Service Category",
   "service.specific": "Specific Service Type",
-
+  
   "validation_status": "حالة التحقق",
   "pdf_notice": "هذه الوثيقة مأخوذة من موقع [afetbilgi.com](https://afetbilgi.com). آخر تاريخ للتحقق من صحة البيانات: {date}",
   "validation_time": "الساعة التحديث",
