--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -70,9 +70,10 @@
   "data.digital_platforms.title": "Digital Solidarity Campaigns",
   "data.digital_platforms.subtitle": "You can find details of digital solidarity campaigns from the links below.",
   "data.services.title": "Services in Cities Outside the Disaster Area",
+  "data.emergency_areas.title": "{{city}}, {{county}} Acil Toplanma Alanları",
   "service.category": "Service Category",
   "service.specific": "Specific Service Type",
-  
+
   "validation_status": "Rewşa verastkirinê",
   "pdf_notice": "",
   "validation_time": "",
