--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -71,7 +71,7 @@
   "data.digital_platforms.title": "Digital Solidarity Campaigns",
   "data.digital_platforms.subtitle": "You can find details of digital solidarity campaigns from the links below.",
   "data.services.title": "Services in Cities Outside the Disaster Area",
-  "data.emergency_areas.title": "{{city}}, {{county}} Acil Toplanma Alanları",
+  "data.emergency_areas.title": "{{city}}, {{county}} Emergency Assembly Areas",
   "service.category": "Service Category",
   "service.specific": "Specific Service Type",
 
